# xingli

./: .git-mirror.json  README.md  xingli.cabal
app/: Main.hs
examples/: program.lcn  recursion.lcnr  sample.ml  simple.lc
src/: CurryTypes.hs  LCParser.hs  LDef.hs  Parser.hs  Pretty.hs  Typeclasses.hs
src/Expr/: LC.hs  LCN.hs  LCNR.hs  ML.hs
src/Parser/: Applicative.hs  LC.hs  LCN.hs  LCNR.hs  ML.hs
src/Types/: CurryTypes.hs  ML.hs
src/expr/: LC.hs  LCN.hs  LCNR.hs
src/types/: CurryTypes.hs
test/: CurryTyperTest.hs  LCNParserTest.hs  LCNRParserTest.hs  LCNRTyperTest.hs  LCNTyperTest.hs  LCParserTest.hs  LCTyperTest.hs  MLParserTest.hs  MLTyperTest.hs  ParserTest.hs  TUtils.hs  Tests.hs
